--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,7 @@ header {
   z-index: 150;
   box-shadow: 0 2px 3px rgba(0,0,0, .4);
   text-align: center
+  margin: -80px;
 }
 .main-nav-scrolled,
 header {
