--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ header {
   background: #FFD447;
   z-index: 150;
   box-shadow: 0 2px 3px rgba(0,0,0, .4);
-  text-align: center
+  text-align: center;
   margin-bottom: -80px;
 }
 .main-nav-scrolled,
